use theme variables

--- a/views/dataprivacy/privacy_erh-persb-daten.hbs
+++ b/views/dataprivacy/privacy_erh-persb-daten.hbs
@@ -2,7 +2,7 @@
 	Erhebung personenbezogener Daten
 </h3>
 <p>Gem. Art. 4 Nr. 1 der europäischen Datenschutz-Grundverordnung (DS-GVO) beschreiben personenbezogene Daten Einzelangaben über persönliche oder sachliche Verhältnisse einer bestimmten oder – ohne besondere Schwierigkeiten bestimmbaren – natürlichen Person (Betroffene/r). Zu diesen Informationen gehören vor allem Details, die Rückschlüsse auf Ihre Identität zulassen, zum Beispiel Ihren Namen oder Ihre Email-Adresse. Statistische Daten, die keine Rückschlüsse auf Ihre Person zulassen, sind keine personenbezogenen Daten.</p>
-<p>Die Erhebung personenbezogener Daten ist auf ein notwendiges Minimum beschränkt. Zur Nutzung der HPI Schul-Cloud sind folgende Angaben erforderlich:</p>
+<p>Die Erhebung personenbezogener Daten ist auf ein notwendiges Minimum beschränkt. Zur Nutzung der {{theme.title}} sind folgende Angaben erforderlich:</p>
 <ul>
 	<li>Anzeigename</li>
 	<li>Vor- und Nachname</li>
@@ -10,7 +10,7 @@
 	<li>Schule</li>
 	<li>Passwort als Prüfsumme</li>
 </ul>
-<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer Email-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die HPI Schul-Cloud erhalten.</p>
+<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer Email-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die {{theme.title}} erhalten.</p>
 <p>Darüber hinaus werden folgende Daten erfasst:</p>
 <ul>
 	<li>Gruppenmitgliedschaften, z. B. Klasse und Kurse</li>
@@ -26,4 +26,4 @@
 	<li>Art, Inhalt und Empfänger/innen von Benachrichtigungen</li>
 </ul>
 <p>Die Daten werden ausschließlich nach den Bestimmungen der DS-GVO,  des Bundesdatenschutzgesetzes (BDSG) und des Telemediengesetzes (TMG) erhoben und durch geeignete Maßnahmen organisatorischer sowie technischer Art geschützt. Sie werden derzeit auf den Servern des HPI in Potsdam gespeichert. Sämtliche Zugriffe auf die Server werden mit IP-Adresse und Zeitstempel protokolliert.</p>
-<p>Die Löschung der gespeicherten Daten erfolgt innerhalb von 7 Tagen nach Zugang des Widerrufs der Einwilligungserklärung, am Ende des laufenden Schuljahres, bei Verlassen der Schule, bei schuljahresübergreifenden Projekte bei Projektende, sowie bei Beendigung des HPI Schul-Cloud-Projekts.</p>
+<p>Die Löschung der gespeicherten Daten erfolgt innerhalb von 7 Tagen nach Zugang des Widerrufs der Einwilligungserklärung, am Ende des laufenden Schuljahres, bei Verlassen der Schule, bei schuljahresübergreifenden Projekte bei Projektende, sowie bei Beendigung des {{theme.title}}-Projekts.</p>
