--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -4,7 +4,9 @@
             <a>&copy; 2018 </a>
 
             <div>
-                <a href="/impressum">Impressum & Datenschutzerklärung</a>
+                <a href="/impressum">Impressum</a>
+                <span> - </span>
+                <a href="https://s3.hidrive.strato.com/schul-cloud-hpi/n21/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung</a>
             </div>
         </div>
     </div>
