Technischer Bericht korrekt verlinkt

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -95,7 +95,7 @@
                 <p>Sämtliche Programme und das Benutzerprofil werden via Internet zur Verfügung gestellt. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
                 <p>Die Bereitstellung der HPI Schul-Cloud ist ein entscheidender Schritt, um die Nutzung digitaler Medien in der Schule flächendeckend voranzubringen.</p>
                 <ul>
-                    <li>Mehr Informationen: <a href="/other/pdf/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf" title="Initiates file download" target="_blank">Technischer Bericht: "Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland" (.pdf)</a></li>
+                    <li>Mehr Informationen: <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-f%C3%BCr-Schulen-in-Deutschland.pdf" title="Initiates file download" target="_blank">Technischer Bericht: "Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland" (.pdf)</a></li>
                 </ul>
                 <div class="text-center">
                     <a href="/about"class="btn btn-outline btn-white-outlined mt-2">
