added more newsletter and open

--- a/theme/brb/views/dataprivacy/privacy.hbs
+++ b/theme/brb/views/dataprivacy/privacy.hbs
@@ -5,21 +5,22 @@
     <p>Hinweise zum Datenschutz entnehmen Sie bitte folgender Seite.</p>
 
     {{#embed "dataprivacy/privacy_priv-und-daten"}}{{/embed}}
-	
+
     {{#embed "dataprivacy/privacy_verantw-stelle"}}{{/embed}}
 
     {{#embed "dataprivacy/privacy_erh-persb-daten"}}{{/embed}}
 
     {{#embed "dataprivacy/privacy_verarb-persb-daten"}}{{/embed}}
-	
+
+	{{#embed "dataprivacy/privacy_newsletter"}}{{/embed}}
+
     {{#embed "dataprivacy/privacy_cookies"}}{{/embed}}
-    
+
 	{{#embed "dataprivacy/privacy_logs"}}{{/embed}}
-	
+
 	{{#embed "dataprivacy/privacy_weiterg-von-daten"}}{{/embed}}
-	
+
 	{{#embed "dataprivacy/privacy_rechte"}}{{/embed}}
-	
+
 	{{#embed "dataprivacy/privacy_anschrift"}}{{/embed}}
-	
 </div>
