email-adresse -> E-Mail-Adresse

--- a/theme/brb/views/dataprivacy/privacy_erh-persb-daten.hbs
+++ b/theme/brb/views/dataprivacy/privacy_erh-persb-daten.hbs
@@ -1,16 +1,16 @@
 <h3>
 	Erhebung personenbezogener Daten
 </h3>
-<p>Gem. Art. 4 Nr. 1 der europäischen Datenschutz-Grundverordnung (DSGVO) beschreiben personenbezogene Daten Einzelangaben über persönliche oder sachliche Verhältnisse einer bestimmten oder – ohne besondere Schwierigkeiten bestimmbaren – natürlichen Person (Betroffene/r). Zu diesen Informationen gehören vor allem Details, die Rückschlüsse auf Ihre Identität zulassen, zum Beispiel Ihren Namen oder Ihre Email-Adresse. Statistische Daten, die keine Rückschlüsse auf Ihre Person zulassen, sind keine personenbezogenen Daten.</p>
+<p>Gem. Art. 4 Nr. 1 der europäischen Datenschutz-Grundverordnung (DSGVO) beschreiben personenbezogene Daten Einzelangaben über persönliche oder sachliche Verhältnisse einer bestimmten oder – ohne besondere Schwierigkeiten bestimmbaren – natürlichen Person (Betroffene/r). Zu diesen Informationen gehören vor allem Details, die Rückschlüsse auf Ihre Identität zulassen, zum Beispiel Ihren Namen oder Ihre E-Mail-Adresse. Statistische Daten, die keine Rückschlüsse auf Ihre Person zulassen, sind keine personenbezogenen Daten.</p>
 <p>Die Erhebung personenbezogener Daten ist auf ein notwendiges Minimum beschränkt. Zur Nutzung der {{theme.title}} sind folgende Angaben erforderlich:</p>
 <ul>
 	<li>Anzeigename</li>
 	<li>Vor- und Nachname</li>
-	<li>Email-Adresse</li>
+	<li>E-Mail-Adresse</li>
 	<li>Schule</li>
 	<li>Passwort als Prüfsumme</li>
 </ul>
-<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer Email-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die {{theme.title}} erhalten.</p>
+<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer E-Mail-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die {{theme.title}} erhalten.</p>
 <p>Darüber hinaus werden folgende Daten erfasst:</p>
 <ul>
 	<li>Gruppenmitgliedschaften, z. B. Klasse und Kurse</li>
