--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -11,7 +11,7 @@
 
             <section class="card">
                 <div class="card-block">
-                    <h4>Herzlich Willkommen bei der Niedersächsischen Bildungscloud!</h4>
+                    <h4>Herzlich willkommen bei der Niedersächsischen Bildungscloud!</h4>
                     <p>Seit dem 20.2.2018 steht die Cloud für Niedersächsische Schulen zur praktischen Erprobung zur Verfügung. 45 Projektschulen
                         und Projektfollowerschulen erarbeiten wie die Einbindung einer Cloudlösung in den unterrichtlichen
                         Alltag gelingen kann. Das n-21 Projekt zur Entwicklung einer Niedersächsische Bildungscloud, orientierte
