--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -19,7 +19,7 @@
 		<div class="rows-2">
 			<div>
 				<h1 class="section-title">
-					Herzlich Willkommen bei der <span style="white-space: nowrap;">HPI Schul-Cloud!</span>
+					Herzlich willkommen bei der <span style="white-space: nowrap;">HPI Schul-Cloud!</span>
 				</h1>
 				<p>Das <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt
 					unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/"
