--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -11,7 +11,7 @@
 
             <section class="card">
                 <div class="card-block">
-                    <h4>Herzlich Willkommen bei der Schul-Cloud Brandenburg!</h4>
+                    <h4>Herzlich willkommen bei der Schul-Cloud Brandenburg!</h4>
                     <p>„Das Lernen mit digitalen Medien ist die Herausforderung mit der größten Dynamik. Dazu braucht es eine leistungsfähige, digitale Infrastruktur. Zu den wichtigsten Vorhaben gehört die am Hasso-Plattner-Institut entwickelte Schul-Cloud. Sie soll die Schulen des Landes vernetzen, so dass Lehrkräfte, Schülerinnen und Schüler jederzeit und überall Zugang zu Lern- und Lehrmaterialien haben. Die professionelle zentrale Wartung für alle Schulen verringert deutlich den Verwaltungs- und Betreuungsaufwand. Wir versprechen uns von der Schul-Cloud einen deutlichen Schub in der digitalen Bildung und freuen uns auf den Start des Projekts.“ - Bildungsministerin Britta Ernst bei der Eröffnungsveranstaltung am 2. Mai 2019.</p>
 					<p>Das Land Brandenburg pilotiert die vom Hasso-Plattner-Institut entwickelte Schul-Cloud mit zunächst 51 Schulen. Hinzu kommen drei Schulen aus dem HPI/MINT-EC-Projekt. Die Pilotierung erfolgt in den Schuljahren 2019/2020 und 2020/2021.</p>
 					<h4>Sie setzt besondere Schwerpunkte bei der</h4>
