--- a/views/firstLogin/sections/parent_data.hbs
+++ b/views/firstLogin/sections/parent_data.hbs
@@ -1,6 +1,6 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
   <h2 class="h4">Ihre Daten</h2>
-  <p>Für Schüler unter 16 Jahren muss ein Erziehungsberechtigter in die Nutzung der {{@root.theme.short_title}} einwilligen.</p>
+  <p>Für Schüler unter {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahren muss ein Erziehungsberechtigter in die Nutzung der {{@root.theme.short_title}} einwilligen.</p>
   <p>Dazu benötigen wir folgende Angaben von Ihnen:</p>
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
