help dropdown is now opened to left side on smaller screens

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -699,7 +699,14 @@ footer {
                 border-color: transparent transparent rgba(0,0,0,.15) transparent;
                 border-width: 11px;
                 margin-top: -12px;
-            }
+			}
+
+			@include media-breakpoint-down(sm) {
+				left: -216px;
+				&::after, &::before {
+					left: 210px;
+				}
+			}
         }
     }
 }
