fix class registration links

--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -76,10 +76,10 @@
             </p>
             <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
             <p>
-                <button data-class="{{class._id}}" class="btn btn-secondary btn-send-links-emails">
+                <button data-class="{{class._id}}" data-role="student" class="btn btn-secondary btn-send-links-emails">
                     Links an Schüler E-Mail Adressen senden
                 </button>
-                <button data-class="{{class._id}}" class="btn btn-secondary btn-print-links">
+                <button data-class="{{class._id}}" data-role="student" class="btn btn-secondary btn-print-links">
                     Link-Druckbogen erstellen
                 </button>
             </p>
