--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -90,7 +90,7 @@
                         {{/content}}
                     {{/embed}}
                 {{else}}
-                    {{#embed "help/icon-card" title="Kontaktformular" icon="fa-pencil" class="contact-card col-md-6" id="kontakt"}}
+                    {{#embed "help/icon-card" id="contact-form" title="Kontaktformular" icon="fa-pencil" class="contact-card col-md-6" id="kontakt"}}
                         {{#content "card-body"}}
                             {{> "help/contact"}}
                         {{/content}}
