--- a/theme/n21/views/dataprivacy/privacy_erh-persb-daten.hbs
+++ b/theme/n21/views/dataprivacy/privacy_erh-persb-daten.hbs
@@ -2,7 +2,7 @@
 	Erhebung personenbezogener Daten
 </h3>
 <p>Gem. Art. 4 Nr. 1 der europäischen Datenschutz-Grundverordnung (DSGVO) beschreiben personenbezogene Daten Einzelangaben über persönliche oder sachliche Verhältnisse einer bestimmten oder – ohne besondere Schwierigkeiten bestimmbaren – natürlichen Person (Betroffene/r). Zu diesen Informationen gehören vor allem Details, die Rückschlüsse auf Ihre Identität zulassen, zum Beispiel Ihren Namen oder Ihre E-Mail-Adresse. Statistische Daten, die keine Rückschlüsse auf Ihre Person zulassen, sind keine personenbezogenen Daten.</p>
-<p>Die Erhebung personenbezogener Daten ist auf ein notwendiges Minimum beschränkt. Zur Nutzung der {{theme.title}} sind folgende Angaben erforderlich:</p>
+<p>Die Erhebung personenbezogener Daten ist auf ein notwendiges Minimum beschränkt. Zur Nutzung der Niedersächsischen Bildungscloud sind folgende Angaben erforderlich:</p>
 <ul>
 	<li>Anzeigename</li>
 	<li>Vor- und Nachname</li>
@@ -10,7 +10,7 @@
 	<li>Schule</li>
 	<li>Passwort als Prüfsumme</li>
 </ul>
-<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer E-Mail-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die {{theme.title}} erhalten.</p>
+<p>Diese Angaben werden gespeichert, damit Sie mit Ihrer E-Mail-Adresse und dem von Ihnen selbst gewählten Passwort Zugriff auf die Niedersächsische Bildungscloud erhalten.</p>
 <p>Darüber hinaus werden folgende Daten erfasst:</p>
 <ul>
 	<li>Gruppenmitgliedschaften, z. B. Klasse und Kurse</li>
@@ -25,5 +25,5 @@
 	<li>Inhalte der Kommunikation im Kontext von Kollaboration, der Lehrer-Schüler-Kommunikation, sowie der Schüler-Schüler-Kommunikation</li>
 	<li>Art, Inhalt und Empfänger/innen von Benachrichtigungen</li>
 </ul>
-<p>Die Daten werden ausschließlich nach den Bestimmungen der EU-DSGVO, des Bundesdatenschutzgesetzes (BDSG) und des Telemediengesetzes (TMG) erhoben und durch geeignete Maßnahmen organisatorischer sowie technischer Art geschützt. Sie werden derzeit auf den Servern des HPI in Potsdam gespeichert. Sämtliche Zugriffe auf die Server werden mit IP-Adresse und Zeitstempel protokolliert.</p>
-<p>Die Löschung der gespeicherten Daten erfolgt innerhalb von 7 Tagen nach Zugang des Widerrufs der Einwilligungserklärung, am Ende des laufenden Schuljahres, bei Verlassen der Schule, bei schuljahresübergreifenden Projekten bei Projektende, sowie bei Beendigung des Projektes Niedersächsische Bildungscloud.</p>
+<p>Die Daten werden ausschließlich nach den Bestimmungen der EU-Datenschutz-Grundverordnung (EU-DSGVO), des Bundesdatenschutzgesetzes (BDSG) und des Telemediengesetzes (TMG) sowie entsprechender landesrechtlicher Bestimmungen, insbesondere des Nds. Schulgesetzes (NSchG) erhoben und durch geeignete Maßnahmen organisatorischer sowie technischer Art geschützt. Sie werden derzeit auf den Servern der Landesinitiative n-21, welche bei der Hetzner Online GmbH, Industriestr. 25, 91710 Gunzenhausen angemietet sind, gespeichert. Sämtliche Zugriffe auf die Server werden mit IP-Adresse und Zeitstempel protokolliert.</p>
+<p>Die Löschung der gespeicherten Daten erfolgt innerhalb von 7 Tagen nach Zugang des Widerrufs der Einwilligungserklärung, am Ende des laufenden Schuljahres, bei Verlassen der Schule, bei schuljahresübergreifenden Projekten bei Projektende, sowie bei Beendigung des Niedersächsischen Bildungscloud-Projekts.</p>
