--- a/theme/n21/views/imprint/imprint_platform-intro.hbs
+++ b/theme/n21/views/imprint/imprint_platform-intro.hbs
@@ -2,5 +2,5 @@
         Rechtliche Hinweise:
 </h3>
 <p>
-	Die {{theme.title}} ist ein Landespilotprojekt, welches durch die Landesinitiative n-21 im Auftrag des Niedersächsischen Kultusministerium und in technisch-organisatorischer Kooperation mit dem Hasso-Plattner-Institut in Potsdam <a href="https://hpi.de" target="_blank" rel="noopener">https://hpi.de</a> durchgeführt wird.
+	Die Niedersächsische Bildungscloud ist ein Landespilotprojekt, welches durch die Landesinitiative n-21 im Auftrag des Niedersächsischen Kultusministerium und in technisch-organisatorischer Kooperation mit dem Hasso-Plattner-Institut in Potsdam <a href="https://hpi.de" target="_blank" rel="noopener">https://hpi.de</a> durchgeführt wird.
 </p>
