open platform changes and email

--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -37,7 +37,7 @@
                 Da uns bewusst ist, wie hoch die Nachfrage auch von anderen Schulen ist, sammeln wir momentan die Anfragen auf einer
                 Interessenliste und werden zu gegebener Zeit mit dem BMBF über eine weitere Öffnung sprechen. Falls Sie Interesse
                 an der Nutzung der HPI Schul-Cloud haben, senden Sie gerne folgende Informationen an
-                <a href="mailto:schul-cloud@hpi.de" target="_blank" rel="noopener">schul-cloud@hpi.de</a>:
+                <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a>:
                 <ul>
                     <li>Name der Schule und Schulform</li>
                     <li>Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
@@ -67,7 +67,7 @@
             </p>
             <p>
                 Wenn Sie als Landesinitiative Interesse daran haben, mit der HPI Schul-Cloud zu kooperieren, wenden Sie sich gerne
-                an <a href="mailto:schul-cloud@hpi.de" target="_blank" rel="noopener">schul-cloud@hpi.de</a>.
+                an <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a>.
             </p>
 		{{/content}}
 	{{/embed}}
