--- a/theme/open/views/dataprivacy/privacy_guests.hbs
+++ b/theme/open/views/dataprivacy/privacy_guests.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/simple"}}
+{{#extend "lib/loggedout"}}
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/imprint/imprint.css"/>
