--- a/theme/open/views/imprint/imprint_guests.hbs
+++ b/theme/open/views/imprint/imprint_guests.hbs
@@ -8,7 +8,7 @@
     {{/content}}
 
     {{#content "page"}}
-		{{#embed "dataprivacy/privacy"}}{{/embed}}
+		{{#embed "imprint/imprint"}}{{/embed}}
     {{/content}}
 
 {{/extend}}
