--- a/views/dataprivacy/privacy.hbs
+++ b/views/dataprivacy/privacy.hbs
@@ -1,31 +1,35 @@
 <div class="section-imprint {{#unless loggedin}}loggedout{{/unless}}">
-	{{#unless loggedin}}
-		<div class="section-title">
-			<h2>Datenschutzerklärung</h2>
-		</div>
-	{{/unless}}
+	{{#embed "authentication/section"}}
+		{{#content "body"}}
+			{{#unless loggedin}}
+				<div class="section-title">
+					<h2>Datenschutzerklärung</h2>
+				</div>
+			{{/unless}}
 
-	<p>Hinweise zum Datenschutz entnehmen Sie bitte folgender Seite.</p>
+			<p>Hinweise zum Datenschutz entnehmen Sie bitte folgender Seite.</p>
 
-	{{#embed "dataprivacy/privacy_priv-und-daten"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_priv-und-daten"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_verantw-stelle"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_verantw-stelle"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_erh-persb-daten"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_erh-persb-daten"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_verarb-persb-daten"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_verarb-persb-daten"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_newsletter"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_newsletter"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_cookies"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_cookies"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_logs"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_logs"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_webanalyse"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_webanalyse"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_weiterg-von-daten"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_weiterg-von-daten"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_rechte"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_rechte"}}{{/embed}}
 
-	{{#embed "dataprivacy/privacy_anschrift"}}{{/embed}}
+			{{#embed "dataprivacy/privacy_anschrift"}}{{/embed}}
+		{{/content}}
+	{{/embed}}
 </div>
