update sentry, reformat tags to init

--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -1,20 +1,19 @@
 {{#ifneq @root.SENTRY_DSN false}}
-<script src="/vendor-optimized/sentry/5.5.0/bundle.min.js"></script>
+<script src="/vendor-optimized/@sentry/browser/build/bundle.min.js"></script>
 <script>
-	Sentry.init({ dsn: '{{@root.SENTRY_DSN}}' });
-	Sentry.configureScope((scope) => {
+	Sentry.init({ 
+		dsn: "{{@root.SENTRY_DSN}}",
+		environment:  "{{@root.env}}",
+		release: "schulcloud-client@{{@root.sha}}",
+		domaqin: "foo"
+	});
+	Sentry.configureScope(function(scope){
+		scope.setLevel('info');
 		{{#if @root.currentUser}}
 		scope.setUser({ "id": "{{@root.currentUser._id}}" });
 		{{/if}}
-		scope.setTag({ "domain": "{{@root.env}}" });
-		scope.setTag({ "env": "{{@root.env}}" });
-		scope.setTag({ "release": "{{@root.version}}" });
-		scope.setTag({ "sha": "{{@root.sha}}" });
-		scope.setLevel('info');
+		scope.setTag({ "domain": "{{@root.domain}}" });
+		scope.setTag({ "version": "{{@root.version}}" });
 	});
-	window.onerror = function report(msg, url, lineNo, columnNo, error) {
-		Sentry.captureException(error);
-		return false;
-	}
 </script>
 {{/ifneq}}
