added sentry to express application

--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -4,7 +4,7 @@
 	Sentry.init({ 
 		dsn: "{{@root.SENTRY_DSN}}",
 		environment:  "{{@root.domain}}",
-		release: "schulcloud-client@{{@root.version}}",
+		release: "schulcloud-client-browser@{{@root.version}}",
 	});
 	Sentry.configureScope((scope)=>{
 		scope.setLevel('info');
