--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -3,7 +3,7 @@
 <script>
 	Sentry.init({ 
 		dsn: "{{@root.SENTRY_DSN}}",
-		environment:  "{{@root.domain}}",
+		environment:  "{{@root.env}}",
 		release: "schulcloud-client-browser@{{@root.version}}",
 	});
 	Sentry.configureScope((scope)=>{
@@ -11,10 +11,10 @@
 		{{#if @root.currentUser}}
 		scope.setUser({ "id": "{{@root.currentUser._id}}" });
 		{{/if}}
-		scope.setTag("env","{{@root.env}}");
+		scope.setTag("domain","{{@root.domain}}");
+		scope.setTag("theme","{{@root.theme.short_title}}")
 		scope.setTag("sha","{{@root.sha}}");
 		scope.setTag("version","{{@root.version}}");
 	});
-	dewdewdew();
 </script>
 {{/ifneq}}
