first draft of fixes

--- a/views/administration/forms/form-invitation-student.hbs
+++ b/views/administration/forms/form-invitation-student.hbs
@@ -2,8 +2,8 @@
 <div class="form-group">
     <label for="invitation-link">Um in die Schul-Cloud einzuladen, verteile folgenden Link an: </label>
     <p>
-        <b>Schüler unter 16 Jahre:</b> die Eltern <br/>
-        <b>Schüler ab 16 Jahre:</b> an die Schüler selbst <br/>
+        <b>Schüler unter {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre:</b> die Eltern <br/>
+        <b>Schüler ab {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre:</b> an die Schüler selbst <br/>
     </p>
     <p>Bevor die Nutzung der Schul-Cloud möglich ist, müssen Eltern und/oder Schüler den elektronischen Einwilligungsprozess durchlaufen haben.</p>
     <input id="invitation-link" class="form-control" name="invitation" type="text" />
