preselect course startdate instead of today

--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -123,7 +123,7 @@
                             data-date
                             type="text"
                             class="form-control"
-                            value="{{datePickerTodayMinus 0 0 0 'DD.MM.YYYY'}}"
+                            value="{{course.startDate}}"
                             title="Bitte Datum im Format TT.MM.JJJJ eingeben"/>
                       </div>
 
