some small changes

--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -14,7 +14,7 @@
           <fieldset>
               <input type="radio" id="reg-u14" name="student-age" value="u14"> <label for="reg-u14">unter 14 Jahre alt.</label><br/>
               <input type="radio" id="reg-1415" name="student-age" value="1415"> <label for="reg-1415">zwischen 14 und {{ add CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS -1 }} Jahre alt.</label><br>
-              <input type="radio" id="reg-16" name="student-age" value="16"> <label for="reg-16">mindestens {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre alt.</label>
+              <input type="radio" id="reg-16" name="student-age" value="16"> <label for="reg-16">ab {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre alt.</label>
           </fieldset>
       </div>
 
