--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -13,7 +13,7 @@
 		<div class="form-group">
 			<fieldset>
 				<input type="radio" id="reg-u16" name="student-age" value="u16"> <label for="reg-u16">unter {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre alt</label><br>
-				<input type="radio" id="reg-16" name="student-age" value="16"> <label for="reg-16">mindestens {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre alt</label>
+				<input type="radio" id="reg-16" name="student-age" value="16"> <label for="reg-16">ab {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} Jahre alt</label>
 			</fieldset>
 		</div>
 		<p></p>
