--- a/views/administration/forms/form-students.hbs
+++ b/views/administration/forms/form-students.hbs
@@ -19,7 +19,7 @@
 
 <div class="form-group">
     <label for="create_birthday">Geburtsdatum (optional):</label>
-    <input id="create_birthday" class="form-control" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} 0 0 "DD.MM.YYYY"}}" name="birthday" type="text" autocomplete="off"/>
+    <input id="create_birthday" class="form-control" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS 0 0 "DD.MM.YYYY"}}" name="birthday" type="text" autocomplete="off"/>
 </div>
 
 <label>
