--- a/views/administration/users_skipregistration.hbs
+++ b/views/administration/users_skipregistration.hbs
@@ -43,7 +43,7 @@
                 <label>Geburtsdatum: <sup>*</sup></label>
                 <input class="form-control linked" id="birthday" data-date
                     data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}"
-                    name="birthday" type="text" required value="{{dateToPicker user.birthday}}" />
+                    name="birthday" type="text" required value="{{dateToPicker user.birthday "DD.MM.YYYY"}}" />
             </div>
             {{/unless}}
             <div class="form-group">
