fix for admin student overview

--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -8,7 +8,7 @@
 	{{#content "page"}}
 	<div id="welcome-screen">
 		<h2 class="h4">Willkommen zur Anmeldung in der {{theme.title}}!</h2>
-		<p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei Schülern über {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} er selbst.</p>
+		<p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei Schülern über {{CONSENT_WITHOUT_PARENTS_MIN_AGE_YEARS}} sie selbst.</p>
 		<p>Bitte wähle das Alter des Schülers:</p>
 		<div class="form-group">
 			<fieldset>
