--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
 					<li>Datenschutzerklärung: <a href="/impressum#data_security">HPI</a> / <a
-							href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster
+							href="{{@root.theme.documents.baseFiles.privacy}}" target="_blank">Muster
 							Schulen</a></li>
 					<li><a href="/team">Team</a></li>
 					<li><a href="/partner">Partner</a></li>
