optimize footer links

--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -4,8 +4,8 @@
 			<div  class="col-md-4">        
 				<h4>Kontakt</h4>
 				<ul>
-					<li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target="_blank" rel="noopener">terhaseborg@n-21.de</a></li>
-					<li>Support Anfragen: <a href="mailto:nbc-support@netz-21.de" target="_blank" rel="noopener">nbc-support@netz-21.de</a></li>
+					<li><a href="mailto:terhaseborg@n-21.de" target="_blank" rel="noopener">Allgemeine Anfragen: terhaseborg@n-21.de</a></li>
+					<li><a href="mailto:nbc-support@netz-21.de" target="_blank" rel="noopener">Support Anfragen: nbc-support@netz-21.de</a></li>
 				</ul>
 			</div>
 			<div  class="col-md-4">        
