--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -6,9 +6,9 @@
 			<div class="col-md-4">
 				<h2 class="h4">Kontakt</h2>
 				<ul>
-					<li>Allgemeine Anfragen: <span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a></span></li>
-					<li>Inhalteanbieter: <span style="white-space: nowrap;"><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a></span></li>
-					<li>Datenschutz: <span style="white-space: nowrap;"><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: info@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: inhalte@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: datenschutz@schul-cloud.org</a></span></li>
 					<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">Newsletter
 							abonnieren</a></li>
 				</ul>
@@ -17,9 +17,9 @@
 				<h2 class="h4">Links</h2>
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
-					<li>Datenschutzerklärung: <a href="/datenschutz">HPI</a> / <a
-							href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank" rel="noopener">Muster
-							Schulen</a></li>
+					<li><a href="/datenschutz">Datenschutzerklärung: HPI</a>
+					<li><a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
+					</li>
 					<li><a href="/team">Team</a></li>
 					<li><a href="/partner">Partner</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
