--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -4,9 +4,9 @@
 			<div class="col-md-4">
 				<h4>Kontakt</h4>
 				<ul>
-					<li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a></li>
-					<li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a></li>
-					<li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a>
+					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: info@schul-cloud.org</a></li>
+					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: inhalte@schul-cloud.org</a></li>
+					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: datenschutz@schul-cloud.org</a>
 					</li>
 				</ul>
 			</div>
