--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -9,6 +9,8 @@
 				<span> - </span>
 				<a href="/datenschutz">Datenschutzerklärung</a>
 				<span> - </span>
+				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Nutzungsordnung-HPI-Schule-Schueler-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Nutzungsordnung</a>
+				<span> - </span>
 				<a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a>
 			</div>
 			<div>
