--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -7,7 +7,9 @@
 			<div>
 				<a href="/impressum">Impressum</a>
 				<span> - </span>
-				<a href="/datenschutz">Datenschutzerklärung</a>
+				<a href="/datenschutz">Datenschutzerklärung: HPI</a>
+				<span> - </span>
+				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung: Brandenburg</a>
 				<span> - </span>
 				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Nutzungsordnung-HPI-Schule-Schueler-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Nutzungsordnung</a>
 				<span> - </span>
