--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -9,7 +9,7 @@
 				<span> - </span>
 				<a href="/datenschutz">Datenschutzerklärung: HPI</a>
 				<span> - </span>
-				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung: Brandenburg</a>
+				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung: Schulen</a>
 				<span> - </span>
 				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Nutzungsordnung-HPI-Schule-Schueler-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Nutzungsordnung</a>
 				<span> - </span>
