--- a/views/help/accordion-sections.hbs
+++ b/views/help/accordion-sections.hbs
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div id="accordion" role="tablist" aria-multiselectable="true">
-                        {{#each faq}}
+                        {{#each sections}}
                             <div class="card">
                                 <div class="card-header" role="tab" id="heading-{{@index}}">
                                     <h2 class="h5 mb-0">
