--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -1,6 +1,6 @@
 <section data-panel="section-{{section-nr}}">
     <h2 class="h4">Danke!</h2>
     <p>Du kannst jetzt mit der Benutzung der {{@root.theme.short_title}} fortfahren.<br>
-        <a class="btn btn-primary mt-2" href="/">{{@root.theme.short_title}} erkunden</a>
+        <a class="btn btn-primary mt-2" data-testid='Schul-Cloud-erkunden-Btn' href="/">{{@root.theme.short_title}} erkunden</a>
     </p>
 </section>
