--- a/views/help/partials/help_nutzungshilfen.hbs
+++ b/views/help/partials/help_nutzungshilfen.hbs
@@ -1,4 +1,4 @@
-{{#ifCond isDemo "&& !" isStudent}}
+{{#ifCond isDemo "||" isStudent}}
 	{{#embed "help/icon-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card col-xs-12" id="nutzungshilfen"}}
 		{{#content "card-body"}}
 			{{> "help/icon-link-group" links=(jsonParse '[
@@ -16,11 +16,6 @@
 					"title": "Schnellstart-PDF",
 					"icon": "fa-file-pdf-o",
 					"src": "https://docs.schul-cloud.org/download/attachments/13828239/HPI%20Schul-Cloud%20-%20Schnellstart%20f%C3%BCr%20Lehrkr%C3%A4fte.pdf"
-				},
-				{
-					"title": "Willkommens-Dokumente",
-					"icon": "fa-folder-open",
-					"src": "/help/faq/documents",
 				}
 			]') link-class="col-sm-4"}}
 		{{/content}}
@@ -43,6 +38,11 @@
 					"title": "Schnellstart-PDF",
 					"icon": "fa-file-pdf-o",
 					"src": "https://docs.schul-cloud.org/download/attachments/13828239/HPI%20Schul-Cloud%20-%20Schnellstart%20f%C3%BCr%20Lehrkr%C3%A4fte.pdf"
+				},
+				{
+					"title": "Willkommens-Dokumente",
+					"icon": "fa-folder-open",
+					"src": "/help/faq/documents"
 				}
 			]') link-class="col-sm-4"}}
 		{{/content}}
