fix expanded login form

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -70,20 +70,7 @@
 	{{/content}}
 {{/embed}}
 
-{{#embed "authentication/section" style="accent"  class="content-width-max"}}
-	{{#content "body"}}
-	<div style="text-align: center;">
-		<h2 class="h3 section-title center" style="max-width: 20ch; margin: 0 auto;">
-			Alle Neuigkeiten rund um die <span style="white-space: nowrap;">HPI Schul-Cloud</span> bequem in Ihrem Postfach:
-		</h2>
-		<a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-outline btn-white-outlined mt-2">
-			Newsletter abonnieren
-		</a>
-	</div>
-	{{/content}}
-{{/embed}}
-
-{{#embed "authentication/section" class=""}}
+{{#embed "authentication/section" style="accent" class=""}}
 	{{#content "body"}}
 		<h2 class="h3 section-title center"><span style="white-space: nowrap;">HPI Schul-Cloud</span> Blog</h2>
 			<div class="blog-cards">
@@ -94,6 +81,19 @@
 				{{/each}}
 			</div>
 		<a href="https://blog.schul-cloud.org" target="scblog" class="blog-link">weitere Artikel anzeigen</a>
+	{{/content}}
+{{/embed}}
+
+{{#embed "authentication/section"  class="content-width-max"}}
+	{{#content "body"}}
+	<div style="text-align: center;">
+		<h2 class="h3 section-title center" style="max-width: 20ch; margin: 0 auto;">
+			Alle Neuigkeiten rund um die <span style="white-space: nowrap;">HPI Schul-Cloud</span> bequem in Ihrem Postfach:
+		</h2>
+		<a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-outline btn-white-outlined mt-2">
+			Newsletter abonnieren
+		</a>
+	</div>
 	{{/content}}
 {{/embed}}
 
