class delete button should work again, the new time button also don't redirect anymore

--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -95,9 +95,9 @@
                         {{#embed "courses/components/template-new-course-time"}}{{/embed}}
                     </tbody>
                 </table>
-                <span class="new-course-time-add" data-timesref="#collapse1">
+                <button class="new-course-time-add btn-link" data-timesref="#collapse1" type="button">
                     <i class="fa fa-plus-circle fa-6"></i> Neuen Termin hinzufügen
-                </span>
+                </button>
             </div>
         </div>
     </div>
