--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -7,7 +7,7 @@
             </div>
         </div>
         {{/if}}
-        <div class="row tasks card-deck-row">
+        <div class="row tasks card-deck-row" data-testid="courses">
             {{#each content}}
             <div class="sc-card-wrapper col-xl-3 col-lg-4 col-md-6 col-sm-12" data-rss="{{isRSS}}" data-id="{{id}}">
                 {{> 'lib/components/sc-card' link-text=../link-text additionalInfoName=../additionalInfoName}}
