--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -64,7 +64,7 @@
                     <div class="row">
                         <div class="col-sm-12"><h2 class="h5">Meine Materialien</h2></div>
                     </div>
-                    <div class="row tasks card-deck-row">
+                    <div class="row tasks card-deck-row" data-testid="courses">
                         {{#each myMaterials}}
                             <div class="sc-card-wrapper col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 {{> 'lib/components/sc-card' link-text=../link-text}}
