--- a/static/styles/teams/teams.scss
+++ b/static/styles/teams/teams.scss
@@ -7,6 +7,7 @@
           cursor: pointer;
           .i-cog{
               font-size: medium;
+              color: $secondaryColor;
           }
         }
         .title-headline {
