--- a/views/administration/classes_skipregistration.hbs
+++ b/views/administration/classes_skipregistration.hbs
@@ -6,9 +6,9 @@
 {{#content "page"}}
 <p>
     Du kannst auf dieser Seite im Namen deiner Schüler das Einverständnis zur <a
-        href="{{@root.theme.documents.baseFiles.privacy}}"
+        href="{{@root.theme.documents.baseFiles.privacyExemplary}}"
         target="_blank">Datenschutzerklärung</a>
-    und zur <a href="{{@root.theme.documents.baseFiles.termsOfUse}}"
+    und zur <a href="{{@root.theme.documents.baseFiles.termsOfUseExemplary}}"
         target="_blank">Nutzungsordnung</a> der {{@root.theme.short_title}} erklären. <br>
     Durch den Klick auf <i>"Einverständnis im Namen der Schüler erklären"</i> bestätigst du, dass du das Einverständnis
     der Schüler bzw. deren Eltern auf anderem Wege erhalten hast.
