--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -7,7 +7,7 @@
             <div>
                 <a href="/impressum">Impressum</a>
                 <span> - </span>
-                Datenschutzerklärung: <a href="/datenschutz">HPI</a> / <a href="{{@root.theme.documents.baseFiles.privacy}}" target="_blank" rel="noopener">Muster Schulen</a>
+                Datenschutzerklärung: <a href="/datenschutz">HPI</a> / <a href="{{@root.theme.documents.baseFiles.privacyExemplary}}" target="_blank" rel="noopener">Muster Schulen</a>
                 <span> - </span>
                 <a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank" rel="noopener">Kontakt</a>
                 <span> - </span>
